--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,6 +46,7 @@ jobs:
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
+           path: survey
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
