--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,7 @@ on:
     - master
     paths:
     - '**.yml'
-    - 'survey/**/*.qmd'
+    - '**.qmd'
   workflow_dispatch:
 permissions: write-all
 
