--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,5 +1,23 @@
 project:
   title: "Eurobarometer"
+  type: website
+
+website:
+  title: ""
+  description: ""
+  navbar:
+    right:
+      - survey.qmd
+      - music.qmd
+      - economic.qmd
+      - icon: github
+        href: https://github.com/
+      - icon: twitter
+        href: https://twitter.com
+format:
+  html:
+    theme: cosmo
+    css: styles.css
 
 editor: visual
 
